@@ -267,7 +267,7 @@
     <property name="enable_layout_config">yes</property>
     <property name="window-position">GTK_WIN_POS_NONE</property>
 
-    <child internal-child="vbox">
+<!--    <child internal-child="vbox">
       <widget class="GnomeDock" id="dock1">
         <property name="allow_floating">yes</property>
         <property name="visible">yes</property>
@@ -351,11 +351,10 @@
         <property name="expand">yes</property>
         <property name="fill">yes</property>
       </packing>
-    </child>
+    </child> -->
 
     <child>
       <widget class="GnomeAppBar" id="appbar1">
-        <property name="child_name">GnomeApp:appbar</property>
         <property name="has_progress">no</property>
         <property name="has_status">yes</property>
         <property name="visible">yes</property>
@@ -365,6 +364,6 @@
         <property name="expand">yes</property>
         <property name="fill">yes</property>
       </packing>
-    </child>
+    </child> 
   </widget>
 </glade-interface>
